        # In the class 'creme_core.core.setting_key.SettingKey', you can now pass :
             - a custom form-field class.
             - a custom renderer function.
        # In 'creme_core.gui' :
            - In the class 'bricks._BrickRegistry', 3 methods to unregister brick classes have been added.
            - A method 'button_menu.ButtonsRegistry.unregister()' has been added.
            - A method 'custom_form.CustomFormDescriptorRegistry.unregister()' has been added.
            - A method 'mass_import.FormRegistry.unregister()' has been added.
            - A method 'merge._MergeFormRegistry.unregister()' has been added.
        # In 'creme_core.templatetags.creme_bricks':
            - 'brick_action' accepts a new boolean argument 'comeback' ; once enabled it will add a GET argument
              'callback_url' with the current location (client side).
        # Apps :
            * Creme_config:
                - In the class 'registry._ConfigRegistry', some methods to unregister brick classes have been added.
                - Many portals have been reworked to store the list of displayed Brick as a class attribute.
            * Activities:
                - The models 'ActivityType' & 'ActivitySubType' now inherit 'creme_core.models.MinionModel' (see <Breaking changes> part too).
                - Upgrade FullCalendar :
                    - Use ISO8601 format WITH timezone (e.g 2023-04-14T10:38:30+01:00) for the views:
                         - activities__calendars_activities
                         - activities__set_activity_dates
                    - Display "busy" events (no collision) with a stripped background.
                    - Support timezone provided by the user information instead of browser.
            * Reports:
                - 'creme.D3TubeChart' now supports color field from data. 
            * Sketch:
                - New 'creme.D3LineChart' to draw curved line with (optional) dots and tooltips.