@@ -19,7 +19,9 @@
 from __future__ import annotations
 
 import logging
-from typing import Iterable, Iterator, Sequence
+from collections import defaultdict
+from heapq import heappop, heappush
+from typing import DefaultDict, Iterable, Iterator, Sequence
 
 from ..models import CremeEntity
 
@@ -27,6 +29,8 @@ logger = logging.getLogger(__name__)
 
 
 class Button:
+    "Button displayed above the bricks in detail-views of CremeEntities."
+
     # ID of the button, stored in DB (i.e. the button configuration), to
     # retrieve the right button class (so it must be unique)
     # Override it in child class with a value generated by 'generate_id()'.
@@ -101,6 +105,8 @@ class Button:
 
 
 class ButtonsRegistry:
+    "ButtonsRegistry of <Button> classes, to retrieve them by their ID."
+
     class RegistrationError(Exception):
         pass
 
@@ -109,8 +115,22 @@ class ButtonsRegistry:
 
     def __init__(self):
         self._button_classes: dict[str, type[Button]] = {}
+        self._mandatory_classes: DefaultDict[
+            type[CremeEntity] | None,
+            dict[str, tuple[int, type[Button]]]
+        ] = defaultdict(dict)
+
+    def __iter__(self) -> Iterator[tuple[str, Button]]:
+        """Yield tuples (button_id, button) for all registered classes.
+        Notice that mandatory button classes are not returned.
+        """
+        for button_id, button_cls in self._button_classes.items():
+            yield button_id, button_cls()
 
     def register(self, *button_classes: type[Button]) -> ButtonsRegistry:
+        """Register several classes of Button at once.
+        @return The registry instance to chain calls in a fluent way.
+        """
         setdefault = self._button_classes.setdefault
 
         for button_cls in button_classes:
@@ -137,7 +157,50 @@ class ButtonsRegistry:
 
         return self
 
+    def register_mandatory(self,
+                           button_class: type[Button],
+                           priority: int = 0,
+                           ) -> ButtonsRegistry:
+        """Register a class of Button which is mandatory.
+        It means an instance of this class will be displayed in the button menu
+        whatever is the button configuration.
+         - The class should not be registered with <register()> too (& so will
+           not be available in the configuration).
+         - The button will be present is the detail-views of the models returned
+           by the method <get_ctypes()> of the given button. <None> means the
+           button will be on all detail-views.
+
+        @param priority: The priority of ordering (see the method <mandatory_buttons()>).
+               0 means <start of the mandatory section>.
+               Greater priority means the button is displayed after.
+        @return The registry instance to chain calls in a fluent way.
+        """
+        button_id = button_class.id
+        if not button_id:
+            raise self.RegistrationError(
+                f'Button class with empty ID: {button_class}'
+            )
+
+        classes = self._mandatory_classes
+        models = button_class().get_ctypes() or [None]
+
+        for model in models:
+            buttons = classes[model]
+
+            if button_id in buttons:
+                raise self.RegistrationError(
+                    f"Duplicated button's ID (or button registered twice): "
+                    f"{button_id}"
+                )
+
+            buttons[button_id] = (priority, button_class)
+
+        return self
+
     def unregister(self, *button_classes: type[Button]) -> ButtonsRegistry:
+        """Unregister several Button classes at once.
+        All classes must be registered.
+        """
         for button_cls in button_classes:
             button_id = button_cls.id
 
@@ -153,10 +216,36 @@ class ButtonsRegistry:
 
         return self
 
+    def unregister_mandatory(self, button_class: type[Button]) -> ButtonsRegistry:
+        """Unregister several Button classes at once.
+        All classes must be registered with <register_mandatory()>.
+        """
+        button_id = button_class.id
+        if not button_id:
+            raise self.UnRegistrationError(
+                f'Button class with empty ID: {button_class}'
+            )
+
+        classes = self._mandatory_classes
+        models = button_class().get_ctypes() or [None]
+
+        for model in models:
+            if classes[model].pop(button_id, None) is None:
+                raise self.UnRegistrationError(
+                    f'Button class with invalid ID (already unregistered?): {button_class}'
+                )
+
+        return self
+
     def get_button(self, button_id: str) -> Button | None:
+        "Get a button instance found by its ID."
         cls = self._button_classes.get(button_id)
 
         return cls() if cls else None
+
+    # TODO?
+    # def get_mandatory_button(self, button_id: str, model: type[CremeEntity]):
+    #     pass
 
     def get_buttons(self, id_list: Iterable[str], entity: CremeEntity) -> Iterator[Button]:
         """Generate the Buttons to be displayed on the detail-view of an entity.
@@ -167,14 +256,26 @@ class ButtonsRegistry:
         @yield creme_core.gui.button_menu.Button instances.
         """
         button_classes = self._button_classes
+        mandatory_classes = self._mandatory_classes
         model = type(entity)
 
         for button_id in id_list:
             button_cls = button_classes.get(button_id)
 
+            # if button_cls is None:
+            #     logger.warning('Button seems deprecated: %s', button_id)
+            #     continue
             if button_cls is None:
-                logger.warning('Button seems deprecated: %s', button_id)
-                continue
+                prio_n_cls = (
+                    mandatory_classes[None].get(button_id)
+                    or mandatory_classes[model].get(button_id)
+                )
+
+                if prio_n_cls is None:
+                    logger.warning('Button seems deprecated: %s', button_id)
+                    continue
+
+                button_cls = prio_n_cls[1]
 
             button = button_cls()
 
@@ -190,9 +291,25 @@ class ButtonsRegistry:
             if button.ok_4_display(entity):
                 yield button
 
-    def __iter__(self) -> Iterator[tuple[str, Button]]:
-        for b_id, b_cls in self._button_classes.items():
-            yield b_id, b_cls()
+    def mandatory_buttons(self, entity: CremeEntity) -> Iterator[Button]:
+        """Get instances of all mandatory classes corresponding to an entity
+        (based of its model).
+        Instances are ordered by their priority (see <register_mandatory()>).
+        """
+        heap = []
+        classes = self._mandatory_classes
+
+        for prio_n_cls in classes[None].values():
+            heappush(heap, prio_n_cls)
+
+        for prio_n_cls in classes[type(entity)].values():
+            heappush(heap, prio_n_cls)
+
+        while heap:
+            button = heappop(heap)[1]()
+
+            if button.ok_4_display(entity=entity):
+                yield button
 
 
 button_registry = ButtonsRegistry()
