@@ -1,5 +1,6 @@
 {% extends 'creme_core/generics/view_entity.html' %}
 
+{% comment %}
 {% block instance_buttons %}
     {% if not object.is_closed %}
         <li>
@@ -8,3 +9,4 @@
     {% endif %}
     {{block.super}}
 {% endblock %}
+{% endcomment %}
